# osmium

./: Cargo.toml  README.md
osmium-nn/: Cargo.toml  README.md
osmium-nn/benches/: dense.rs
osmium-nn/src/: activations.rs  lib.rs
osmium-nn/src/activations/: relu.rs
osmium-nn/src/layers/: linear.rs
