[package]
name = "osmium-nn"
version = "0.1.0"
authors = ["Ethan Jaszewski <ethanjaszewski@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
rand = "0.8.0"
nalgebra = "0.27.1"

[dev-dependencies]
criterion = { version = "0.3.4", features = ["html_reports"] }

[[bench]]
name = "dense"
harness = false
